--- a/public/partials/student/details.html
+++ b/public/partials/student/details.html
@@ -21,6 +21,12 @@
     </div>
     <div class="row mts">
         <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+            <label for="user-roll-number">Roll Number</label>
+            <input id="user-roll-" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.RollNumber">
+        </div>
+    </div>
+    <div class="row mts">
+        <div class="col-xs-12 col-lg-10 col-lg-offset-1">
             <label for="user-name">Class</label>
             <input id="user-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.Class">
         </div>
