--- a/public/partials/student/new.html
+++ b/public/partials/student/new.html
@@ -1,77 +1,90 @@
-<div class="col-lg-3 col-lg-offset-1" ng-init="ctrl.getClassRooms()">
-    <div class="row text-center">
-        <div class="col-lg-12">
-            <h3>Add New Student</h3>
+<div class="col-lg-12" ng-init="ctrl.getClassRooms()">
+    <div class="row" ng-show="ctrl.ClassRoomCollection.length" ng-hide="ctrl.ClassRoomCollection.length">
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+            <div class="row">
+                <div class="col-xs-12 col-lg-12">
+                    <h3 class="text-center">Class room data not available!</h3>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <label for="email-id">First Name</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.FirstName">
+    <div class="row" ng-show="ctrl.ClassRoomCollection.length">
+        <div class="col-lg-3 col-lg-offset-1">
+            <div class="row text-center">
+                <div class="col-lg-12">
+                    <h3>Add New Student</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <label for="email-id">First Name</label>
+                    <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.FirstName">
+                </div>
+            </div>
+            <div class="row mts">
+                <div class="col-lg-12">
+                    <label for="email-id">Last Name</label>
+                    <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.LastName">
+                </div>
+            </div>
+            <div class="row mts">
+                <div class="col-lg-12">
+                    <label for="email-id">Class</label>
+                    <select class="form-control" ng-options="class as class.Name for class in ctrl.ClassRoomCollection track by class._id" ng-model="ctrl.SelectedClass"></select>
+                </div>
+            </div>
+            <div class="row mts">
+                <div class="col-lg-12">
+                    <label for="email-id">Roll Number</label>
+                    <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.RollNumber">
+                </div>
+            </div>
+            <div class="row mtl">
+                <div class="col-lg-12">
+                    <button class=" btn btn-primary col-lg-12" ng-click="ctrl.addStudent()">Add New Student</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="row mts">
-        <div class="col-lg-12">
-            <label for="email-id">Last Name</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.LastName">
-        </div>
-    </div>
-    <div class="row mts">
-        <div class="col-lg-12">
-            <label for="email-id">Class</label>
-            <select class="form-control" ng-options="class as class.Name for class in ctrl.ClassRooms track by class._id" ng-model="ctrl.SelectedClass"></select>
-        </div>
-    </div>
-    <div class="row mts">
-        <div class="col-lg-12">
-            <label for="email-id">Roll Number</label>
-            <input id="email-id" type="text" class="form-control" ng-model="ctrl.Model.RollNumber">
-        </div>
-    </div>
-    <div class="row mtl">
-        <div class="col-lg-12">
-            <button class=" btn btn-primary col-lg-12" ng-click="ctrl.addStudent()">Add New Student</button>
-        </div>
-    </div>
-</div>
-<div class="col-lg-6 col-lg-offset-1">
-    <div class="row text-center">
-        <div class="col-lg-12">
-            <h3>Added Students</h3>
-        </div>
-    </div>
-    <div class="row mts text-center" ng-hide="ctrl.Collection.length">
-        <h3>No students added yet!</h3>
-    </div>
-    <div class="row mts" ng-show="ctrl.Collection.length">
-        <div class="col-lg-12">
-            <table class="table table-hover table-bordered text-center">
-                <thead>
-                    <tr>
-                        <th class="text-center">Id</th>
-                        <th class="text-center">Name</th>
-                        <th class="text-center">Class</th>
-                        <th class="text-center">Roll Number</th>
-                        <th class="text-center">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="model in ctrl.Collection">
-                        <td>{{$index+1}}</td>
-                        <td>{{ctrl.getFullName(model)}}</td>
-                        <td>{{model.Class}}</td>
-                        <td>{{model.RollNumber}}</td>
-                        <td>
-                            <span class="glyphicon glyphicon-trash pointer" ng-click="ctrl.removeSelectedRow(model)"></span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="row" ng-show="ctrl.Collection.length">
-        <div class="col-lg-12">
-            <button class="btn btn-primary col-lg-4 col-lg-offset-8" ng-click="ctrl.saveStudentList()">Save List</button>
+        <div class="col-lg-6 col-lg-offset-1">
+            <div class="row text-center">
+                <div class="col-lg-12">
+                    <h3>Added Students</h3>
+                </div>
+            </div>
+            <div class="row mts text-center" ng-hide="ctrl.StudentCollection.length">
+                <h3>No students added yet!</h3>
+            </div>
+            <div class="row mts" ng-show="ctrl.StudentCollection.length">
+                <div class="col-lg-12">
+                    <table class="table table-hover table-bordered text-center">
+                        <thead>
+                            <tr>
+                                <th class="text-center">Id</th>
+                                <th class="text-center">Name</th>
+                                <th class="text-center">Class</th>
+                                <th class="text-center">Roll Number</th>
+                                <th class="text-center">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="model in ctrl.StudentCollection">
+                                <td>{{$index+1}}</td>
+                                <td>{{ctrl.getFullName(model)}}</td>
+                                <td>{{model.Class}}</td>
+                                <td>{{model.RollNumber}}</td>
+                                <td>
+                                    <span class="glyphicon glyphicon-trash pointer" ng-click="ctrl.removeSelectedRow(model)"></span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="row" ng-show="ctrl.StudentCollection.length">
+                <div class="col-lg-12">
+                    <button class="btn btn-primary col-lg-4 col-lg-offset-8" ng-click="ctrl.saveStudentList()">Save List</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
