--- a/public/partials/attendance/new.html
+++ b/public/partials/attendance/new.html
@@ -16,27 +16,29 @@
         </div>
     </div>
     <div class="row" ng-show="ctrl.StudentCollection.length">
-        <table class="table table-hover table-bordered table-condensed text-center">
-            <thead>
-                <tr>
-                    <th class="text-center">Roll Number</th>
-                    <th class="text-center">Name</th>
-                    <th class="text-center">Attendance</th>
-                    <th class="text-center">Note</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="model in ctrl.StudentCollectionPerClass | orderBy:'RollNumber'">
-                    <td>{{model.RollNumber}}</td>
-                    <td> {{ctrl.getFullStudentName(model)}}</td>
-                    <td>
-                        <input type="checkbox" class="form-control input-sm" ng-model="model.IsPresent">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" ng-model="model.Note">
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="col-lg-12">
+            <table class="table table-hover table-bordered table-condensed text-center">
+                <thead>
+                    <tr class="bg-primary">
+                        <th class="text-center">Roll Number</th>
+                        <th class="text-center">Name</th>
+                        <th class="text-center">Attendance</th>
+                        <th class="text-center">Note</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="model in ctrl.StudentCollectionPerClass | orderBy:'RollNumber'">
+                        <td>{{model.RollNumber}}</td>
+                        <td> {{ctrl.getFullStudentName(model)}}</td>
+                        <td>
+                            <input type="checkbox" class="form-control input-sm" ng-model="model.IsPresent">
+                        </td>
+                        <td>
+                            <input class="form-control" type="text" ng-model="model.Note">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
