--- a/public/partials/student/list.html
+++ b/public/partials/student/list.html
@@ -18,7 +18,7 @@
         <div class="col-xs-12 col-lg-12">
             <table class="table table-hover table-bordered table-condensed text-center">
                 <thead>
-                    <tr>
+                    <tr class="bg-primary">
                         <th class="text-center">Roll Number</th>
                         <th class="text-center">Name</th>
                     </tr>
