--- a/public/partials/student/new.html
+++ b/public/partials/student/new.html
@@ -58,7 +58,7 @@
                 <div class="col-lg-12">
                     <table class="table table-hover table-bordered text-center">
                         <thead>
-                            <tr>
+                            <tr class="bg-primary">
                                 <th class="text-center">Id</th>
                                 <th class="text-center">Name</th>
                                 <th class="text-center">Class</th>
