--- a/public/partials/attendance/new.html
+++ b/public/partials/attendance/new.html
@@ -1,10 +1,15 @@
 <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-init="ctrl.getStudentList()">
-    <div class="row" ng-hide="ctrl.StudentCollection.length">
+    <div class="row" ng-show="ctrl.IsLoading">
+        <div class="col-xs-12 col-lg-12">
+            <h3 class="text-center">Loading new attendance...</h3>
+        </div>
+    </div>
+    <div class="row" ng-show="!ctrl.IsLoading && !ctrl.StudentCollection.length">
         <div class="col-xs-12 col-lg-12">
             <h3 class="text-center">Students data is not available!</h3>
         </div>
     </div>
-    <div class="row" ng-show="ctrl.StudentCollection.length">
+    <div class="row" ng-show="!ctrl.IsLoading && ctrl.StudentCollection.length">
         <div class="col-lg-2">
             <select class="form-control mtxs col-lg-2" ng-options="class as class.Name for class in ctrl.ClassRoomCollection track by class._id" ng-model="ctrl.SelectedClass" ng-change="ctrl.updateStudentListPerClass()"></select>
         </div>
@@ -15,15 +20,15 @@
             <button class="btn btn-primary col-lg-7 col-lg-offset-5 mtxs" ng-click="ctrl.saveDetails()">Submit Attendance</button>
         </div>
     </div>
-    <div class="row" ng-show="ctrl.StudentCollection.length">
+    <div class="row" ng-show="!ctrl.IsLoading && ctrl.StudentCollection.length">
         <div class="col-lg-12">
             <table class="table table-hover table-bordered table-condensed text-center">
                 <thead>
                     <tr class="bg-primary">
-                        <th class="text-center">Roll Number</th>
-                        <th class="text-center">Name</th>
-                        <th class="text-center">Attendance</th>
-                        <th class="text-center">Note</th>
+                        <th class="text-center col-lg-2">Roll Number</th>
+                        <th class="text-center col-lg-4">Name</th>
+                        <th class="text-center col-lg-2">Attendance</th>
+                        <th class="text-center col-lg-4">Note</th>
                     </tr>
                 </thead>
                 <tbody>
