--- a/public/partials/attendance/report.html
+++ b/public/partials/attendance/report.html
@@ -1,41 +1,52 @@
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-hide="ctrl.AttendanceCollection.length" ng-init="ctrl.getAttendanceDetails()">
+<div class="col-lg-12" ng-init="ctrl.getAttendanceDetails()">
     <div class="row">
-        <div class="col-xs-12 col-lg-12">
-            <h3 class="text-center">Attendance details are not available!</h3>
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.IsLoading">
+            <div class="row">
+                <div class="col-xs-12 col-lg-12">
+                    <h3 class="text-center">Loading attendance details...</h3>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.AttendanceCollection.length">
-    <div class="row">
-        <div class="col-lg-2">
-            <select class="form-control mtxs col-lg-2" ng-options="class as class.Name for class in ctrl.ClassRoomCollection track by class._id" ng-model="ctrl.SelectedClass" ng-change="ctrl.updateAttendenceListPerClass()"></select>
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="!ctrl.IsLoading && !ctrl.AttendanceCollection.length">
+            <div class="row">
+                <div class="col-xs-12 col-lg-12">
+                    <h3 class="text-center">Attendance details are not available!</h3>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-12 col-lg-8 col-lg-offset-2">
-            <h3>Attendance Details</h3>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-lg-12">
-            <table class="table table-hover table-bordered table-condensed text-center">
-                <thead>
-                    <tr class="bg-primary">
-                        <th class="text-center">Roll Number</th>
-                        <th class="text-center">Name</th>
-                        <th class="text-center">Date</th>
-                        <th class="text-center">Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="model in ctrl.AttendanceCollectionPerClass | orderBy:'StudentId.RollNumber'" ng-class="model.IsPresent ? 'success' : 'danger'">
-                        <td>{{model.StudentId.RollNumber}}</td>
-                        <td>
-                            <a href="#/students/{{model.StudentId._id}}"> {{ctrl.getStudentName(model)}}</a>
-                        </td>
-                        <td>{{model.Date | date:'yyyy-MM-dd'}}</td>
-                        <td ng-class="model.IsPresent ? 'text-success' : 'text-danger'">{{ctrl.getStatus(model)}}</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="!ctrl.IsLoading && ctrl.AttendanceCollection.length">
+            <div class="row">
+                <div class="col-lg-2">
+                    <select class="form-control mtxs col-lg-2" ng-options="class as class.Name for class in ctrl.ClassRoomCollection track by class._id" ng-model="ctrl.SelectedClass" ng-change="ctrl.updateAttendenceListPerClass()"></select>
+                </div>
+                <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+                    <h3>Attendance Details</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-lg-12">
+                    <table class="table table-hover table-bordered table-condensed text-center">
+                        <thead>
+                            <tr class="bg-primary">
+                                <th class="text-center col-lg-2">Roll Number</th>
+                                <th class="text-center col-lg-7">Name</th>
+                                <th class="text-center col-lg-2">Date</th>
+                                <th class="text-center col-lg-1">Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="model in ctrl.AttendanceCollectionPerClass | orderBy:'StudentId.RollNumber'" ng-class="model.IsPresent ? 'success' : 'danger'">
+                                <td>{{model.StudentId.RollNumber}}</td>
+                                <td>
+                                    <a href="#/students/{{model.StudentId._id}}"> {{ctrl.getStudentName(model)}}</a>
+                                </td>
+                                <td>{{model.Date | date:'yyyy-MM-dd'}}</td>
+                                <td ng-class="model.IsPresent ? 'text-success' : 'text-danger'">{{ctrl.getStatus(model)}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
