--- a/public/partials/class-room/details.html
+++ b/public/partials/class-room/details.html
@@ -1,28 +1,35 @@
-<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-hide="ctrl.Model" ng-init="ctrl.getClassRoom()">
-    <h3 class=" text-center ">Class room data is not available!</h3>
-</div>
-<div class="col-xs-12 col-lg-6 col-lg-offset-3 " ng-show="ctrl.Model ">
-    <div class="row ">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1 text-center ">
-            <h3>Class Room Details</h3>
+<div class="col-lg-12" ng-init="ctrl.getClassRoom()">
+    <div class="row">
+        <div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="ctrl.IsLoading">
+            <h3 class=" text-center ">Loading class room details...</h3>
         </div>
-    </div>
-    <div class="row ">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1 ">
-            <label for="display-name ">Name</label>
-            <input id="display-name " type="text " disabled="disabled " class="form-control col-xs-12 col-lg-4 " ng-model="ctrl.Model.Name ">
+        <div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="!ctrl.IsLoading && !ctrl.Model">
+            <h3 class=" text-center ">Class room details is not available!</h3>
         </div>
-    </div>
-    <div class="row mts ">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1 ">
-            <label for="user-name ">Class Teacher</label>
-            <input id="user-name " type="text " disabled="disabled " class="form-control col-xs-12 col-lg-4 " ng-model="ctrl.Model.ClassTeacher ">
-        </div>
-    </div>
-    <div class="row mts ">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1 ">
-            <label for="user-name ">Details</label>
-            <textarea id="user-name " type="text " disabled="disabled " class="form-control col-xs-12 col-lg-4 " ng-model="ctrl.Model.Details "></textarea>
+        <div class="col-xs-12 col-lg-6 col-lg-offset-3 " ng-show="!ctrl.IsLoading && ctrl.Model">
+            <div class="row ">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1 text-center ">
+                    <h3>Class Room Details</h3>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1 ">
+                    <label for="display-name ">Name</label>
+                    <input id="display-name " type="text " disabled="disabled " class="form-control col-xs-12 col-lg-4 " ng-model="ctrl.Model.Name ">
+                </div>
+            </div>
+            <div class="row mts ">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1 ">
+                    <label for="user-name ">Class Teacher</label>
+                    <input id="user-name " type="text " disabled="disabled " class="form-control col-xs-12 col-lg-4 " ng-model="ctrl.Model.ClassTeacher ">
+                </div>
+            </div>
+            <div class="row mts ">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1 ">
+                    <label for="user-name ">Details</label>
+                    <textarea id="user-name " type="text " disabled="disabled " class="form-control col-xs-12 col-lg-4 " ng-model="ctrl.Model.Details "></textarea>
+                </div>
+            </div>
         </div>
     </div>
 </div>
