--- a/public/partials/class-room/list.html
+++ b/public/partials/class-room/list.html
@@ -1,36 +1,39 @@
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-hide="ctrl.Collection.length" ng-init="ctrl.getClassRooms()">
-    <div class="row">
-        <div class="col-xs-12 col-lg-12">
-            <h3 class="text-center">Class room details are not available!</h3>
+<div class="col-lg-12" ng-init="ctrl.getClassRooms()">
+    <civ class="row">
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.IsLoading">
+            <h3 class="text-center">Loading class rooms...</h3>
         </div>
-    </div>
-</div>
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.Collection.length">
-    <div class="row">
-        <div class="col-xs-12 col-lg-12">
-            <h3 class="text-center">Class Room Details</h3>
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="!ctrl.IsLoading && !ctrl.Collection.length">
+            <h3 class="text-center">Class rooms are not available!</h3>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-lg-12">
-            <table class="table table-hover table-bordered table-condensed text-center">
-                <thead>
-                    <tr class="bg-primary">
-                        <th class="text-center">Id</th>
-                        <th class="text-center">Name</th>
-                        <th class="text-center">Class Teacher</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="model in ctrl.Collection | orderBy:'Name'">
-                        <td>{{$index+1}}</td>
-                        <td>
-                            <a href="#/class-room/{{model._id}}">{{model.Name}}</a>
-                        </td>
-                        <td>{{model.ClassTeacher}}</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col-lg-12" ng-show="!ctrl.IsLoading && ctrl.Collection.length">
+            <div class="row">
+                <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+                    <h3 class="text-center">Class Room Details</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+                    <table class="table table-hover table-bordered table-condensed text-center">
+                        <thead>
+                            <tr class="bg-primary">
+                                <th class="text-center">Id</th>
+                                <th class="text-center">Name</th>
+                                <th class="text-center">Class Teacher</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="model in ctrl.Collection | orderBy:'Name'">
+                                <td>{{$index+1}}</td>
+                                <td>
+                                    <a href="#/class-room/{{model._id}}">{{model.Name}}</a>
+                                </td>
+                                <td>{{model.ClassTeacher}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-    </div>
+    </civ>
 </div>
