--- a/public/partials/student/details.html
+++ b/public/partials/student/details.html
@@ -1,34 +1,41 @@
-<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-hide="ctrl.Model" ng-init="ctrl.getStudentDetails()">
-    <h3 class="text-center">Student data is not available!</h3>
-</div>
-<div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="ctrl.Model">
+<div class="col-lg-12" ng-init="ctrl.getStudentDetails()">
     <div class="row">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1 text-center">
-            <h3>Student Details</h3>
+        <div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="ctrl.IsLoading">
+            <h3 class="text-center">Loading student details..</h3>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-            <label for="display-name">First Name</label>
-            <input id="display-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.FirstName">
+        <div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="!ctrl.IsLoading && !ctrl.Model">
+            <h3 class="text-center">Student details is not available!</h3>
         </div>
-    </div>
-    <div class="row mts">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-            <label for="email-id">Last Name</label>
-            <input id="email-id" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.LastName">
-        </div>
-    </div>
-    <div class="row mts">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-            <label for="user-roll-number">Roll Number</label>
-            <input id="user-roll-" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.RollNumber">
-        </div>
-    </div>
-    <div class="row mts">
-        <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-            <label for="user-name">Class</label>
-            <input id="user-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.Class">
+        <div class="col-xs-12 col-lg-6 col-lg-offset-3" ng-show="!ctrl.IsLoading && ctrl.Model">
+            <div class="row">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1 text-center">
+                    <h3>Student Details</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+                    <label for="display-name">First Name</label>
+                    <input id="display-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.FirstName">
+                </div>
+            </div>
+            <div class="row mts">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+                    <label for="email-id">Last Name</label>
+                    <input id="email-id" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.LastName">
+                </div>
+            </div>
+            <div class="row mts">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+                    <label for="user-roll-number">Roll Number</label>
+                    <input id="user-roll-" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.RollNumber">
+                </div>
+            </div>
+            <div class="row mts">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+                    <label for="user-name">Class</label>
+                    <input id="user-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="ctrl.Model.Class">
+                </div>
+            </div>
         </div>
     </div>
 </div>
