--- a/public/partials/student/list.html
+++ b/public/partials/student/list.html
@@ -1,37 +1,40 @@
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-hide="ctrl.StudentCollection.length" ng-init="ctrl.getAllStudents()">
+<div class="col-lg-12" ng-init="ctrl.getAllStudents()">
     <div class="row">
-        <div class="col-xs-12 col-lg-12">
-            <h3 class="text-center">Student details are not available!</h3>
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.IsLoading">
+            <h3 class="text-center">Loading student list...</h3>
         </div>
-    </div>
-</div>
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.StudentCollection.length">
-    <div class="row">
-        <div class="col-xs-12 col-lg-2">
-            <select class="form-control mtxs col-lg-2" ng-options="class as class.Name for class in ctrl.ClassRoomCollection track by class._id" ng-model="ctrl.SelectedClass" ng-change="ctrl.updateStudentListPerClass()"></select>
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="!ctrl.IsLoading && !ctrl.StudentCollection.length">
+            <h3 class="text-center">Student data are not available!</h3>
         </div>
-        <div class="col-xs-12 col-lg-7 col-lg-offset-3">
-            <h3>Student Details</h3>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-lg-12">
-            <table class="table table-hover table-bordered table-condensed text-center">
-                <thead>
-                    <tr class="bg-primary">
-                        <th class="text-center">Roll Number</th>
-                        <th class="text-center">Name</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="model in ctrl.StudentCollectionPerClass | orderBy : 'RollNumber'">
-                        <td>{{model.RollNumber}}</td>
-                        <td>
-                            <a href="#/students/{{model._id}}">{{ctrl.getFullName(model)}}</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="!ctrl.IsLoading && ctrl.StudentCollection.length">
+            <div class="row">
+                <div class="col-xs-12 col-lg-2">
+                    <select class="form-control mtxs col-lg-2" ng-options="class as class.Name for class in ctrl.ClassRoomCollection track by class._id" ng-model="ctrl.SelectedClass" ng-change="ctrl.updateStudentListPerClass()"></select>
+                </div>
+                <div class="col-xs-12 col-lg-7 col-lg-offset-3">
+                    <h3>Student Details</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-lg-12">
+                    <table class="table table-hover table-bordered table-condensed text-center">
+                        <thead>
+                            <tr class="bg-primary">
+                                <th class="text-center">Roll Number</th>
+                                <th class="text-center">Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="model in ctrl.StudentCollectionPerClass | orderBy : 'RollNumber'">
+                                <td>{{model.RollNumber}}</td>
+                                <td>
+                                    <a href="#/students/{{model._id}}">{{ctrl.getFullName(model)}}</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
