--- a/public/partials/student/new.html
+++ b/public/partials/student/new.html
@@ -1,14 +1,15 @@
 <div class="col-lg-12" ng-init="ctrl.getClassRooms()">
-    <div class="row" ng-show="ctrl.ClassRoomCollection.length" ng-hide="ctrl.ClassRoomCollection.length">
+    <div class="row" ng-show="ctrl.IsLoading">
         <div class="col-xs-12 col-lg-8 col-lg-offset-2">
-            <div class="row">
-                <div class="col-xs-12 col-lg-12">
-                    <h3 class="text-center">Class room data not available!</h3>
-                </div>
-            </div>
+            <h3 class="text-center">Loading student data...</h3>
         </div>
     </div>
-    <div class="row" ng-show="ctrl.ClassRoomCollection.length">
+    <div class="row" ng-show="!ctrl.IsLoading && !ctrl.ClassRoomCollection.length">
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+            <h3 class="text-center">Class room data not available!</h3>
+        </div>
+    </div>
+    <div class="row" ng-show="!ctrl.IsLoading && ctrl.ClassRoomCollection.length">
         <div class="col-lg-3 col-lg-offset-1">
             <div class="row text-center">
                 <div class="col-lg-12">
@@ -58,12 +59,12 @@
                 <div class="col-lg-12">
                     <table class="table table-hover table-bordered text-center">
                         <thead>
-                            <tr class="bg-primary">
-                                <th class="text-center">Id</th>
-                                <th class="text-center">Name</th>
-                                <th class="text-center">Class</th>
-                                <th class="text-center">Roll Number</th>
-                                <th class="text-center">Actions</th>
+                            <tr class="bg-primary text-center">
+                                <th class="text-center col-lg-1">Id</th>
+                                <th class="text-center col-lg-6">Name</th>
+                                <th class="text-center col-lg-1">Class</th>
+                                <th class="text-center col-lg-3">Roll Number</th>
+                                <th class="text-center col-lg-1">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
