Integrated role hierarchy

--- a/public/partials/profile/details.html
+++ b/public/partials/profile/details.html
@@ -31,13 +31,13 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <label for="user-name">User Role</label>
                     <select ng-show="ctrl.Model.IsNew" class="form-control" ng-options="Role.Type for Role in ctrl.RoleCollection" ng-model="ctrl.SelectedRole"></select>
-                    <input type="text" ng-hide="ctrl.Model.IsNew" disabled="disabled" class="form-control col-lg-4" ng-model="ctrl.Model.Type">
+                    <input type="text" ng-hide="ctrl.Model.IsNew" disabled="disabled" class="form-control col-lg-4" ng-model="ctrl.SelectedRole.Type">
                 </div>
             </div>
             <div class="row mts">
                 <div class="col-lg-10 col-lg-offset-1">
                     <label for="user-name">User Name</label>
-                    <input type="text" ng-disabled="!ctrl.Model.IsNew" class="form-control col-lg-4" ng-model="ctrl.Model.UserName">
+                    <input type="text" ng-disabled="!ctrl.Model.IsNew" class="form-control col-lg-4" ng-model="ctrl.SelectedRole.Name">
                 </div>
             </div>
             <div class="row mts" ng-show="ctrl.Model.IsNew">
